widget configuration save is complete.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsWidget/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsWidget/Index.cshtml
@@ -117,7 +117,10 @@
                                                                 <div id="collapse_@wZone.Id" class="panel-collapse collapse">
                                                                     <div class="panel-body">
                                                                          @w.Description
-                                                                    </div>
+                                                                        <div>
+                                                                            @Html.Raw(w.RenderConfig(wZone.Id))
+                                                                        </div>
+                                                                    </div>                                                                    
                                                                 </div>
                                                             </div>
                                                         </div>
