--- a/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
@@ -17,6 +17,7 @@
 
     <!-- jQuery -->
     <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/jquery-serializeObject/jquery.serializeObject.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 
